Fixed search results

--- a/app/Resources/views/admin/default/index.html.twig
+++ b/app/Resources/views/admin/default/index.html.twig
@@ -141,7 +141,7 @@
     <script>
         $(document).ajaxStart(function(){
             $('#example').block({
-                message: 'Loading...'
+                message: '<strong>Loading...</strong>'
             });
         });
 
