--- a/app/Resources/views/admin/match/find.html.twig
+++ b/app/Resources/views/admin/match/find.html.twig
@@ -232,7 +232,7 @@
                     <a data-href="edit_profile_link" class="btn btn-orange edit-current-profile">Edit Profile</a>
                 </div>
                 <h4><span data-content="user_info"></span> (<span data-content="matches" data-format="SpanDelimiter"></span>)</h4>
-                <p class="interests">Matching interests: <span data-content="interests" data-format="SpanDelimiter"></span></p>
+                <p class="interests">Matching interests: <span data-content="interests"></span></p>
                 <p data-content="about"></p>
             </div>
             <div class="col-md-2 choice">
