Moved the new_admin to admin2

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -99,6 +99,7 @@
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="{{ path('admin_start') }}">Fikakompisar att matcha</a></li>
                                     <li><a href="{{ path('admin_start', {'type': 'musicfriend'}) }}">Musikkompisar att matcha</a></li>
+                                    <li><a href="{{ path('admin_start2') }}">Nya förfriskningar Vänner att matcha</a></li>
                                     <li><a href="{{ path('admin_connections') }}">Matchade kompisar</a></li>
                                     <li><a href="{{ path('admin_users') }}">Användare</a></li>
                                 </ul>
