--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -68,7 +68,7 @@
                         {% if activeRequest %}
                             <div class="alert alert-danger fade in" role="alert">
                                 <a href="#" class="close" data-dismiss="alert">&times;</a>
-                                <strong>Error!</strong> You still have an active request.
+                                <strong>{{ 'error'|trans }}</strong> {{ 'error.active_request'|trans }}
                             </div>
                         {% endif %}
                         {{ form_start(form) }}
