Fixed summary points

--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -102,10 +102,10 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <div class="col-sm-3">
-                            {{ form_label(form.category) }}
+                            {{ form_label(form.category_id) }}
                         </div>
                         <div class="col-sm-9">
-                            {{ form_widget(form.category) }}
+                            {{ form_widget(form.category_id) }}
                         </div>
                     </div>
                     <div class="form-group">
@@ -134,10 +134,10 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <div class="col-sm-3">
-                            {{ form_label(form.hasChildren) }}
+                            {{ form_label(form.has_children) }}
                         </div>
                         <div class="col-sm-9">
-                            {{ form_widget(form.hasChildren) }}
+                            {{ form_widget(form.has_children) }}
                         </div>
                     </div>
                     <div class="form-group">
@@ -151,20 +151,20 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-3">
-                            {{ form_label(form.municipality) }}
+                            {{ form_label(form.municipality_id) }}
                         </div>
                         <div class="col-sm-9">
-                            {{ form_widget(form.municipality) }}
+                            {{ form_widget(form.municipality_id) }}
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="form-group">
                         <div class="col-sm-3">
-                            {{ form_label(form.musicFriend) }}
+                            {{ form_label(form.music_friend) }}
                         </div>
                         <div class="col-sm-9">
-                            {{ form_widget(form.musicFriend) }}
+                            {{ form_widget(form.music_friend) }}
                         </div>
                     </div>
                 </div>
