Fixed email sending

--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -244,7 +244,8 @@
     </script>
 
     <script>
-        var firstItem = 0;
+        var user_id     = {{ user.id }};
+        var firstItem   = 0;
 
         $(document).ajaxStart(function(){
             $('body').block({
@@ -301,7 +302,6 @@
                     $('#userEditModal .modal-content').html(html);
                     $('#userEditModal').modal('show');
                 });
-
             });
 
             $('body').on('click', '.btn-save-profile', function(e){
@@ -324,8 +324,16 @@
             });
 
             $('.match-results-container').on('click', '.matched-users', function(){
-                $('#match_match_user_id').val($(this).val());
-                $('#btn-approve-send-emails').removeClass('disabled');
+                var match_user_id = $(this).val();
+
+                $.get(Routing.generate('admin_ajax_email_message', {id: user_id, match_user_id: match_user_id}), function (resp){
+
+                    $('#match_email_to_user').html(resp.user_message);
+                    $('#match_email_to_match_user').html(resp.match_user_message);
+
+                    $('#match_match_user_id').val(match_user_id);
+                    $('#btn-approve-send-emails').removeClass('disabled');
+                });
             });
 
             $('#btn-approve-send-emails').click(function(e){
